tests/baselines/reference/stringLiteralsWithEqualityChecks04.errors.txt
tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks04.ts(16,5): error TS2367: Comparison of expressions of types '"foo"' and '"bar"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks04.ts(25,5): error TS2367: Comparison of expressions of types '"foo"' and '"bar"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.


==== tests/cases/conformance/types/literal/stringLiteralsWithEqualityChecks04.ts (2 errors) ====
    interface Runnable {
        isRunning: boolean;
    }
    
    interface Refrigerator extends Runnable {
        makesFoodGoBrrr: boolean;
    }
    
    let x: string;
    let y: "foo" | Refrigerator;
    
    let b: boolean;
    b = x == y;
    b = "foo" == y
    b = y == "foo";
    b = "foo" == "bar";
        ~~~~~~~~~~~~~~
!!! error TS2367: Comparison of expressions of types '"foo"' and '"bar"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
    b = "bar" == x;
    b = x == "bar";
    b = y == "bar";
    b = "bar" == y;
    
    b = x != y;
    b = "foo" != y
    b = y != "foo";
    b = "foo" != "bar";
        ~~~~~~~~~~~~~~
!!! error TS2367: Comparison of expressions of types '"foo"' and '"bar"' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert one of the expressions to 'unknown' first.
    b = "bar" != x;
    b = x != "bar";
    b = y != "bar";
    b = "bar" != y;
    